--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                     </div>
                     <div class="card-body">
                       <h5 class="card-title">Kalanchoe</h5>
-                      <p class="card-text truncar-3l">Excelente para decoração de espaços internos e externos, trazendo um toque especial ao ambiente.</p>
+                      <p class="card-text truncar-3l">Excelente para decoração de espaços internos e externos, trazendo um toque especial ao ambiente desejado.</p>
                     </div>
                     <div class="card-footer">
                       <a href="carrinho.html" class="btn btn-success mt-2 d-block">adicionar a sacola</a>
