--- a/presente.html
+++ b/presente.html
@@ -186,7 +186,7 @@
                     </div>
                     <div class="card-body">
                       <h5 class="card-title">Aperitivos</h5>
-                      <p class="card-text truncar-3l">Ótima opção para dar de presente a alguem nos fim de semana, nada melhor como uns bons aperitivos.</p>
+                      <p class="card-text truncar-3l">Ótima opção para dar de presente a alguem nos fim de semana, nada melhor como uns bons aperitivos para comemorar.</p>
                     </div>
                     <div class="card-footer">
                       <a href="carrinhopresente.html" class="btn btn-success mt-2 d-block">adicionar a sacola</a>
@@ -253,7 +253,7 @@
                     </div>
                     <div class="card-body">
                       <h5 class="card-title">Cesta café da manhã</h5>
-                      <p class="card-text truncar-3l">Uma ótima sugestão para supreender alguem logo cedo.</p>
+                      <p class="card-text truncar-3l">Uma ótima sugestão para supreender alguem especial logo de manhã.</p>
                     </div>
                     <div class="card-footer">
                       <a href="carrinhopresente.html" class="btn btn-success mt-2 d-block">adicionar a sacola</a>
@@ -339,7 +339,7 @@
                     </div>
                     <div class="card-body">
                       <h5 class="card-title">Chandon </h5>
-                      <p class="card-text truncar-3l">Que tal dar um toque extra de classe no presente da sua pessoa especial?.</p>
+                      <p class="card-text truncar-3l">Que tal dar um toque extra de classe e amor no presente da sua pessoa presenteada ehn?.</p>
                     </div>
                     <div class="card-footer">
                       <a href="carrinhopresente.html" class="btn btn-success mt-2 d-block">adicionar a sacola</a>
