--- a/presente.html
+++ b/presente.html
@@ -339,11 +339,11 @@
                     </div>
                     <div class="card-body">
                       <h5 class="card-title">Chandon </h5>
-                      <p class="card-text truncar-3l">Que tal dar um toque extra de classe e amor no presente da sua pessoa presenteada ehn?.</p>
+                      <p class="card-text truncar-3l">Que tal um toque extra de classe e amor no presente da sua pessoa presenteada?.</p>
                     </div>
                     <div class="card-footer">
                       <a href="carrinhopresente.html" class="btn btn-success mt-2 d-block">adicionar a sacola</a>
-                      <small class="text-sucess">26 unidades em estoque</small>
+                      <small class="text-sucess">24 unidades em estoque</small>
                     </div>
                   </div>
                 </div>
