--- a/presente.html
+++ b/presente.html
@@ -186,7 +186,7 @@
                     </div>
                     <div class="card-body">
                       <h5 class="card-title">Aperitivos</h5>
-                      <p class="card-text truncar-3l">Ótima opção para dar de presente a alguem nos fim de semana, nada melhor como uns bons aperitivos para comemorar.</p>
+                      <p class="card-text truncar-3l">Ótima opção para dar de presente a alguem nos fim de semana, nada melhor como uns bons aperitivos.</p>
                     </div>
                     <div class="card-footer">
                       <a href="carrinhopresente.html" class="btn btn-success mt-2 d-block">adicionar a sacola</a>
